[package]
name = "jwks-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
openssl = { version = "0.10" }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
base64 = "0.21"
once_cell = "1.20"
rand = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
openssl = "0.10"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
base64 = "0.21"
once_cell = "1.20"
rand = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }  # <-- add this

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
