[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
base64 = "0.21"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# crypto
aes-gcm = { version = "0.10", features = ["std"] }  # AES-256-GCM
rand = "0.8"
sha2 = "0.10"

# password hashing
argon2 = "0.5"
password-hash = "0.5"

# optional rate limiter
governor = "0.6"

[dev-dependencies]
actix-rt = "2"
serde_json = "1.0"
jsonwebtoken = "8"
tempfile = "3.10"
